Fixed halftime button functionality

--- a/Basic Ultimate Stats/index.html
+++ b/Basic Ultimate Stats/index.html
@@ -28,13 +28,13 @@
         </div>
         <div class="row smaller">
             <div class="col-xs-5 text-right">
-                <h4 id="team1name" contentEditable>Team 1</h4></div>
+                <h4 id="team1name" contentEditable>Offense Team</h4></div>
             <div class="col-xs-1 text-center">
                 <h4 id="team1score">0</h4></div>
             <div class="col-xs-1 text-center">
                 <h4 id="team2score">0</h4></div>
             <div class="col-xs-5 text-left">
-                <h4 id="team2name" contentEditable>Team 2</h4></div>
+                <h4 id="team2name" contentEditable>Defense Team</h4></div>
         </div>
         <br>
         <div class="row">
@@ -48,8 +48,8 @@
             <div class="col-md-1"></div>
             <div class="col-xs-12 col-md-4">
                 <div class="row text-center" id="rawData">
-                    <div class="col-xs-6 team1">Team 1</div>
-                    <div class="col-xs-6 team2">Team 2</div>
+                    <div class="col-xs-6 team1">Offense Team</div>
+                    <div class="col-xs-6 team2">Defense Team</div>
                     <table id='data' class='table table-bordered table-condensed'>
                         <tr>
                             <th>Turns</th>
@@ -64,8 +64,8 @@
             <div class="col-md-2"></div>
             <div class="col-xs-12 col-md-4">
                 <div class="row text-center" id="computedData">
-                    <div class="col-xs-6 team1">Team 1</div>
-                    <div class="col-xs-6 team2">Team 2</div>
+                    <div class="col-xs-6 team1">Offense Team</div>
+                    <div class="col-xs-6 team2">Defense Team</div>
                     <table class="table table-bordered table-condensed">
                         <tr>
                             <th>O</th>
