--- a/Basic Ultimate Stats/index.html
+++ b/Basic Ultimate Stats/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Basic Ultimate Stats Tracking</a>
+            </div>
+        </div>
+    </nav>
     <h1 class="text-primary text-center" contentEditable>Click Title And Team Names To Edit</h1>
     <div class="container-fluid">
         <div class="row">
@@ -40,7 +47,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-danger" id="turnover">Turnover</button></div>
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-success" id="score">Score</button></div>
-            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-primary" id="halftime">Halftime</button></div>
+            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-primary" disabled="true" id="halftime">Halftime</button></div>
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-warning" disabled="true" id="undo">Undo</button></div>
         </div>
         <br>
