--- a/Basic Ultimate Stats/index.html
+++ b/Basic Ultimate Stats/index.html
@@ -25,25 +25,19 @@
     </nav>
     <h1 class="text-primary text-center" contentEditable>Click Title And Team Names To Edit</h1>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-5 text-right">
-                <h5 id="team1mode">Offense</h5></div>
-            <div class="col-xs-2 text-center">
-                <h5>Score</h5></div>
-            <div class="col-xs-5 text-left">
-                <h5 id="team2mode">Defense</h5></div>
-        </div>
-        <div class="row smaller">
-            <div class="col-xs-5 text-right">
-                <h4 id="team1name" contentEditable>Offense Team Name</h4></div>
-            <div class="col-xs-1 text-center">
-                <h4 id="team1score">0</h4></div>
-            <div class="col-xs-1 text-center">
-                <h4 id="team2score">0</h4></div>
-            <div class="col-xs-5 text-left">
-                <h4 id="team2name" contentEditable>Defense Team Name</h4></div>
-        </div>
         <br>
+        <table class="table table-condensed">
+            <tr class="noborder">
+                <td class="text-right smaller"><h5 id="team1mode">Offense</h5></td>
+                <td class="text-center"><h5>Score</h5></td>
+                <td class="text-left"><h5 id="team2mode">Defense</h5></td>
+            </tr>
+            <tr>
+                <td class="text-right smaller"><h4 id="team1name" contentEditable>Offense Team Name</h4></td>
+                <td class="text-center" style="white-space: nowrap"><h4><span id="team1score">0</span> - <span id="team2score">0</span></h4></td>
+                <td class="text-left"><h4 id="team2name" contentEditable>Defense Team Name</h4></td>
+            </tr>
+        </table>
         <div class="row">
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-danger" id="turnover">Turnover</button></div>
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-success" id="score">Score</button></div>
@@ -55,9 +49,13 @@
             <div class="col-md-1"></div>
             <div class="col-xs-12 col-md-4">
                 <div class="row text-center" id="rawData">
-                    <div class="col-xs-6 team1">Offense Team Name</div>
-                    <div class="col-xs-6 team2">Defense Team Name</div>
                     <table id='data' class='table table-bordered table-condensed'>
+                        <tr>
+                            <th colspan="2" class="team1">Offense Team Name</th>
+                            <th class="notop">
+                            </th>
+                            <th colspan="2" class="team2">Defense Team Name</th>
+                        </tr>
                         <tr>
                             <th>Turns</th>
                             <th>O/D</th>
@@ -71,9 +69,13 @@
             <div class="col-md-2"></div>
             <div class="col-xs-12 col-md-4">
                 <div class="row text-center" id="computedData">
-                    <div class="col-xs-6 team1">Offense Team Name</div>
-                    <div class="col-xs-6 team2">Defense Team Name</div>
                     <table class="table table-bordered table-condensed">
+                        <tr>
+                            <th colspan="2" class="team1">Offense Team Name</th>
+                            <th class="notop">
+                            </th>
+                            <th colspan="2" class="team2">Defense Team Name</th>
+                        </tr>
                         <tr>
                             <th>O</th>
                             <th>D</th>
