--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Basic Ultimate Stats Tracking</a>
+                <a class="navbar-brand" href="https://github.com/CallMeLuke94/basic-ulti-stats/tree/gh-pages">Basic Ultimate Stats Tracking</a>
             </div>
         </div>
     </nav>
