Team in possession now has yellow name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Basic Ultimate Stats</title>
+    <title id="title">Basic Ultimate Stats</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -23,7 +23,7 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-primary text-center" contentEditable>Click Title And Team Names To Edit</h1>
+    <h1 class="text-primary text-center" id="gameTitle" contentEditable>Click Title And Team Names To Edit</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-5 text-right offense">
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="col-xs-5 text-right offense">
-                <h4 id="team1name" contentEditable>Offense Team Name</h4></div>
+                <h4 id="team1name" style="color: yellow;" contentEditable>Offense Team Name</h4></div>
             <div class="col-xs-1 text-center">
                 <h4 id="team1score">0</h4></div>
             <div class="col-xs-1 text-center">
