--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title id="title">Basic Ultimate Stats</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Basic Ultimate Stats Tracking</a>
+                <a class="navbar-brand" href="https://github.com/CallMeLuke94/basic-ulti-stats/tree/gh-pages">Basic Ultimate Stats Tracking</a>
             </div>
         </div>
     </nav>
