fixed names bug, added xml button, added refresh blocking

--- a/index.html
+++ b/index.html
@@ -28,22 +28,29 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-5 text-right offense">
-                <h5 id="team1mode">Offense</h5></div>
+                <h5 id="team1mode">Offense</h5>
+            </div>
             <div class="col-xs-2 text-center">
-                <h5>Score</h5></div>
+                <h5>Score</h5>
+            </div>
             <div class="col-xs-5 text-left defense">
-                <h5 id="team2mode">Defense</h5></div>
+                <h5 id="team2mode">Defense</h5>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-5 text-right offense">
-                <h4 id="team1name" style="color: yellow;" contentEditable>Offense Team Name</h4></div>
+                <h4 id="team1name" style="color: yellow;" contentEditable>Offense Team Name</h4>
+            </div>
             <div class="col-xs-1 text-center">
-                <h4 id="team1score">0</h4></div>
+                <h4 id="team1score">0</h4>
+            </div>
             <div class="col-xs-1 text-center">
-                <h4 id="team2score">0</h4></div>
+                <h4 id="team2score">0</h4>
+            </div>
             <div class="col-xs-5 text-left defense">
-                <h4 id="team2name" contentEditable>Defense Team Name</h4></div>
-      </div>
+                <h4 id="team2name" contentEditable>Defense Team Name</h4>
+            </div>
+        </div>
         <br>
         <div class="row">
             <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-danger" id="turnover">Turnover</button></div>
@@ -185,6 +192,9 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-sm btn-info" disabled="true" id="save">Save As XML</button>
         </div>
     </div>
 </body>
