--- a/index.html
+++ b/index.html
@@ -197,11 +197,15 @@
             </div>
             <div class="col-md-1"></div>
         </div>
-        <div class="text-center">
-            <button class="btn btn-sm btn-info" disabled="true" id="save">Save As XML</button>
-            <br />
-            <br />
+        <div class="row text-center">
+            <div class="col-xs-12 col-md-6 text-center">
+                <button class="btn btn-sm btn-danger" id="clear">Clear Data</button>
+            </div>
+            <div class="col-xs-12 col-md-6 text-center">
+                <button class="btn btn-sm btn-info" disabled="true" id="save">Save As XML</button>
+            </div>
         </div>
+        <br />
     </div>
 </body>
 
