--- a/index.html
+++ b/index.html
@@ -57,35 +57,50 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-danger" id="turnover">Turnover</button></div>
-            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-success" id="score">Score</button></div>
-            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-primary" disabled="true" id="halftime">Halftime</button></div>
-            <div class="col-xs-12 col-md-3 text-center"><button class="btn btn-lg btn-warning" disabled="true" id="undo">Undo</button></div>
+          <div class="col-sm-6">
+            <div class="col-xs-12 col-md-6 text-center">
+              <button class="btn btn-lg btn-info" id="pass">Pass</button>
+            </div>
+            <div class="col-xs-12 col-md-6 text-center">
+              <button class="btn btn-lg btn-danger" id="turnover">Turnover</button>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="col-xs-12 col-md-6 text-center">
+              <button class="btn btn-lg btn-success" id="score">Score</button>
+            </div>
+            <div class="col-xs-12 col-md-6 text-center">
+              <button class="btn btn-lg btn-primary" disabled="true" id="halftime">Halftime</button>
+              <button class="btn btn-lg btn-warning" disabled="true" id="undo">Undo</button>
+            </div>
+          </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-1"></div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="row text-center" id="rawData">
                     <table id='data' class='table table-bordered table-condensed'>
                         <tr>
-                            <th colspan="2" class="team1">Team 1</th>
+                            <th colspan="3" class="team1">Team 1</th>
                             <th class="notop">
                             </th>
-                            <th colspan="2" class="team2">Team 2</th>
+                            <th colspan="3" class="team2">Team 2</th>
                         </tr>
-                        <tr>
+                        <tr id="title">
+                            <th>Passes</th>
                             <th>Turns</th>
                             <th>O/D</th>
                             <th>Score</th>
                             <th>O/D</th>
                             <th>Turns</th>
+                            <th>Passes</th>
                         </tr>
                     </table>
                 </div>
             </div>
             <div class="col-md-2"></div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="row text-center" id="computedData">
                     <table class="table table-bordered table-condensed">
                         <tr>
@@ -198,11 +213,11 @@
             <div class="col-md-1"></div>
         </div>
         <div class="row text-center">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <button class="btn btn-sm btn-danger" id="clear">Clear Data</button>
             </div>
-            <div class="col-xs-12 col-md-6 text-center">
-                <button class="btn btn-sm btn-info" disabled="true" id="save">Save As XML</button>
+            <div class="col-xs-12 col-sm-6 text-center">
+                <button class="btn btn-sm btn-info" disabled="true" id="save">Save Game</button>
             </div>
         </div>
         <br />
