Removed perctages in table

--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
                             <td id="hdD2">0</td>
                         </tr>
                         <tr>
-                            <td id="crO1">0%</td>
-                            <td id="crD1">0%</td>
-                            <td>Conversion %</td>
-                            <td id="crO2">0%</td>
-                            <td id="crD2">0%</td>
+                            <td id="crO1">0/0</td>
+                            <td id="crD1">0/0</td>
+                            <td>Conversions</td>
+                            <td id="crO2">0/0</td>
+                            <td id="crD2">0/0</td>
                         </tr>
                         <tr>
-                            <td id="pcO1">0%</td>
-                            <td id="pcD1">0%</td>
-                            <td>Perfect Conversion %</td>
-                            <td id="pcO2">0%</td>
-                            <td id="pcD2">0%</td>
+                            <td id="pcO1">0/0</td>
+                            <td id="pcD1">0/0</td>
+                            <td>Perfect Conversions</td>
+                            <td id="pcO2">0/0</td>
+                            <td id="pcD2">0/0</td>
                         </tr>
                         <tr>
                             <td id="mtO1">0</td>
@@ -194,18 +194,18 @@
                             <td id="mtD2">0</td>
                         </tr>
                         <tr>
-                            <td id="rrO1">0%</td>
-                            <td id="rrD1">0%</td>
-                            <td>Recovery %</td>
-                            <td id="rrO2">0%</td>
-                            <td id="rrD2">0%</td>
+                            <td id="rrO1">0/0</td>
+                            <td id="rrD1">0/0</td>
+                            <td>Recovered Points</td>
+                            <td id="rrO2">0/0</td>
+                            <td id="rrD2">0/0</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td id="ds1">0%</td>
-                            <td>Defensive Success Rate</td>
+                            <td id="ds1">0/0</td>
+                            <td>Defensive Successes</td>
                             <td></td>
-                            <td id="ds2">0%</td>
+                            <td id="ds2">0/0</td>
                         </tr>
                     </table>
                 </div>
