added pass completion rate

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <tr>
               <td id="toO1">0</td>
               <td id="toD1">0</td>
-              <td>Turnovers</td>
+              <td><span data-toggle="tooltip" title="Incomplete passes.">Turnovers</span></td>
               <td id="toO2">0</td>
               <td id="toD2">0</td>
             </tr>
@@ -180,14 +180,21 @@
             <tr>
               <td id="tpO1">0/0</td>
               <td id="tpD1">0/0</td>
-              <td>Total Passes</td>
+              <td><span data-toggle="tooltip" title="Total completed passes.">Total Passes</span></td>
               <td id="tpO2">0/0</td>
               <td id="tpD2">0/0</td>
             </tr>
             <tr>
+              <td id="pcrO1">0/0</td>
+              <td id="pcrD1">0/0</td>
+              <td><span data-toggle="tooltip" title="Total completed passes divided by total attempted passes.">Completion Rate</span></td>
+              <td id="pcrO2">0/0</td>
+              <td id="pcrD2">0/0</td>
+            </tr>
+            <tr>
               <td id="mppO1">0</td>
               <td id="mppD1">0</td>
-              <td><span data-toggle="tooltip" title="Total passes divided by points played.">Passes Per Point</span></td>
+              <td><span data-toggle="tooltip" title="Total completed passes divided by points played.">Passes Per Point</span></td>
               <td id="mppO2">0</td>
               <td id="mppD2">0</td>
             </tr>
