Updated tooltip styling

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <tr>
               <td id="pcO1">0/0</td>
               <td id="pcD1">0/0</td>
-              <td><span data-toggle="tooltip" title="Points scored with 0 turnovers / points played.">Perfect Conversions</span></td>
+              <td><span data-toggle="tooltip" title="Points scored with 0 turnovers / had disc points.">Perfect Conversions</span></td>
               <td id="pcO2">0/0</td>
               <td id="pcD2">0/0</td>
             </tr>
@@ -161,7 +161,7 @@
             <tr>
               <td id="rrO1">0/0</td>
               <td id="rrD1">0/0</td>
-              <td><span data-toggle="tooltip" title="(AKA 'Imperfect Conversions') <br/>Points scored with at least 1 turnover / points with at least 1 turnover.">Recovered Points</span></td>
+              <td><span data-toggle="tooltip" title="(AKA 'Imperfect Conversions') Points scored with at least 1 turnover / points with at least 1 turnover.">Recovered Points</span></td>
               <td id="rrO2">0/0</td>
               <td id="rrD2">0/0</td>
             </tr>
